[package]
name = "making_maps"
version = "0.1.0"
authors = ["Andrew McGraw <mcgraw4@illinois.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.23.12"
rand = "0.8.3"
clap = {verison = "3.0", features = ["derive"]}
console_error_panic_hook = "0.1.5"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.wasm-bindgen]
version = "0.2.45"

[dependencies.web-sys]
version = "0.3.22"
features = ["console", "CanvasRenderingContext2d", "ImageData"]

[dev-dependencies]
js-sys = "0.3.22"

[profile.release]
debug = true
